--- a/alimentos.html
+++ b/alimentos.html
@@ -7,7 +7,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <title>Alimentos</title>
 </head>
-<body>  <nav class="navbar" style="background-color: #e3f2fd;">
+<body>
   <nav class="navbar" style="background-color: #e3f2fd;">
     <nav class="navbar navbar-expand-lg bg-body-tertiary" >
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -46,22 +46,22 @@
 </nav>
       <style>
         .container{
-            padding: 30px;
-            display: grid;
-            grid-template-columns: repeat(3, 1fr);
-            gap: 30px;
+          padding: 30px;
+          display: grid;
+          grid-template-columns: repeat(3, 1fr);
+          gap: 30px;
         }
         .element {
-            display: flex;
-            flex-direction: column;
-            height: 100%;
-            width: auto;
-            text-align: center;
-            align-items: center;
-            justify-content: center;
-            border: 1px solid black;
-            border-radius: 20px;
-            padding: 10px;
+          display: flex;
+          flex-direction: column;
+          height: 100%;
+          width: auto;
+          text-align: center;
+          align-items: center;
+          justify-content: center;
+          border: 1px solid black;
+          border-radius: 20px;
+          padding: 10px;
         }
         img {
             height: 30vh;
