--- a/acervo.html
+++ b/acervo.html
@@ -59,11 +59,11 @@
           box-shadow: 0 2px 5px rgba(69, 81, 79, 0.388);
         }
         h1 {
-          color: #eb202042;
+          color: #b11c1c42;
         }
         p {
           line-height: 1.6;
-          color: #5a393b56;
+          color: #32252656;
         }
       </style>
       <div class="container">
@@ -79,7 +79,6 @@
         <li> O que funciona?</li>
         <li> Devolução de livros</li>
         <li>Renovação de livros</li>
-        <li>Laboratório de Internet (De 8h as 18h)</li>
         </p>
       </div>
       <div class="container text-center">
@@ -91,7 +90,9 @@
             Segunda a Sábado
           </div>
           <div class="col">
-            Das 08h as 18h
+           Segunda das 08h as 18h e
+           <div class="col">
+            Sábado 09h as 14h
           </div>
         </div>
 </body>
