--- a/rodape.html
+++ b/rodape.html
@@ -36,8 +36,8 @@
           <p>&copy; 2023 Seu Site. Todos os direitos reservados.</p>
           <p>Horários de Funcionamento da Biblioteca:</p>
           <ul>
-            <li>Segunda a Sexta: 9:00 - 18:00</li>
-            <li>Sábado: 10:00 - 14:00</li>
+            <li>Segunda a Sexta: 08h - 18h</li>
+            <li>Sábado: 09h- 14h</li>
             <li>Domingo: Fechado</li>
           </ul>
         </div>
