--- a/eletronica.html
+++ b/eletronica.html
@@ -83,12 +83,12 @@
 
 </div>
 <div class="element">
-<p><a href="Cabine primária - Operação e manutenção de subestações"> Cabine primária - Operação e manutenção de subestações</a></p>
+<p><a href="https://a.co/d/4MCr8wy" class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"> Cabine primária - Operação e manutenção de subestações</a></p>
 <img src ="img/consumidor.jpg" alt="">
 </div>
 <div class="element">
 
-<p><a href="https://www.amazon.com.br/Comandos-Eletroeletr%C3%B4nicos-Teoria-V%C3%A1rios-Autores/dp/8583931844"> Comandos eletroeletrônicos - Teoria - Vol. 1</a></p>
+<p><a href="https://www.amazon.com.br/Comandos-Eletroeletr%C3%B4nicos-Teoria-V%C3%A1rios-Autores/dp/8583931844" class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"> Comandos eletroeletrônicos - Teoria - Vol. 1</a></p>
 <img src ="img/comandos.jpg" alt="">
 
 </div>
@@ -103,7 +103,6 @@
 <p><a href="https://www.amazon.com.br/Conversores-inversores-Marcos-Antonio-Felizola/dp/8583939349" class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Conversores e Inversores - Fundamentos e aplicações</a></p>
 <img src ="img/invensores.jpg" alt="">
 
-</div>
 </div>
 <div class="element">
 
