--- a/segurançatrabalho.html
+++ b/segurançatrabalho.html
@@ -118,7 +118,7 @@
 </div>
 <div class="element">
 
-</p><a href="https://www.amazon.com.br/Nr-13-Treinamento-Seguran%C3%A7a-Opera%C3%A7%C3%A3o-Caldeiras/dp/8583935432"> NR 13 - Treinamento de Segurança na Operação de Caldeiras </a></p>
+</p><a href="https://www.amazon.com.br/Nr-13-Treinamento-Seguran%C3%A7a-Opera%C3%A7%C3%A3o-Caldeiras/dp/8583935432" class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"> NR 13 - Treinamento de Segurança na Operação de Caldeiras </a></p>
 <img src ="img/NR 13 - Treinamento de Segurança na Operação de Caldeiras.jpg" alt="">
 
 </div>
