--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <p class="titulo">Sugestões:</p>
         <div class="container">
             <div class="element">
-                <p><a href="https://www.estantevirtual.com.br/livros/senai-sp/alimentos-para-animais/2999724477?ano_min=2010&livro_usado=1&b_order=preco&gclid=Cj0KCQjwrfymBhCTARIsADXTabkdJ_BaOizTL7Q1MI9kbm6GyBrbVFpmxM-sHcPty70eiGe6VblYsF8aAsqmEALw_wcB">Alimentos para animais </a></p>
+                <p><a href="https://www.estantevirtual.com.br/livros/senai-sp/alimentos-para-animais/2999724477?ano_min=2010&livro_usado=1&b_order=preco&gclid=Cj0KCQjwrfymBhCTARIsADXTabkdJ_BaOizTL7Q1MI9kbm6GyBrbVFpmxM-sHcPty70eiGe6VblYsF8aAsqmEALw_wcB"class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Alimentos para animais </a></p>
                 <img src="img/Alimentos para animais.jpg" alt="" class="livros">
             </div>
             <div class="element">
