--- a/index.html
+++ b/index.html
@@ -80,15 +80,15 @@
         <p class="titulo">Sugestões:</p>
         <div class="container">
             <div class="element">
-                <p><a href="https://www.estantevirtual.com.br/livros/senai-sp/alimentos-para-animais/2999724477?ano_min=2010&livro_usado=1&b_order=preco&gclid=Cj0KCQjwrfymBhCTARIsADXTabkdJ_BaOizTL7Q1MI9kbm6GyBrbVFpmxM-sHcPty70eiGe6VblYsF8aAsqmEALw_wcB">Alimentos para animais </a></p>
+                <p><a href="https://www.estantevirtual.com.br/livros/senai-sp/alimentos-para-animais/2999724477?ano_min=2010&livro_usado=1&b_order=preco&gclid=Cj0KCQjwrfymBhCTARIsADXTabkdJ_BaOizTL7Q1MI9kbm6GyBrbVFpmxM-sHcPty70eiGe6VblYsF8aAsqmEALw_wcB" class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Alimentos para animais </a></p>
                 <img src="img/Alimentos para animais.jpg" alt="" class="livros">
             </div>
             <div class="element">
-                <p><a href="https://www.magazineluiza.com.br/livro-boas-praticas-de-fabricacao-para-manipulacao-de-alimentos/p/223581600/li/adml/?seller_id=espacoshop&utm_source=google&utm_medium=pla&utm_campaign=&partner_id=68055&gclid=Cj0KCQjwrfymBhCTARIsADXTabkWWUbquGNTsYGm1X9SArEyVz8QWPrdGRTa0i_KIQC_fCDZ9NT9o4saAiTCEALw_wcB&gclsrc=aw.ds" class="link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"> Boas práticas de fabricação para manipulação de alimentos</a></p>
+                <p><a href="https://www.magazineluiza.com.br/livro-boas-praticas-de-fabricacao-para-manipulacao-de-alimentos/p/223581600/li/adml/?seller_id=espacoshop&utm_source=google&utm_medium=pla&utm_campaign=&partner_id=68055&gclid=Cj0KCQjwrfymBhCTARIsADXTabkWWUbquGNTsYGm1X9SArEyVz8QWPrdGRTa0i_KIQC_fCDZ9NT9o4saAiTCEALw_wcB&gclsrc=aw.ds" class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"> Boas práticas de fabricação para manipulação de alimentos</a></p>
                 <img src="img/Boas práticas de fabricação para manipulação de alimentos.jpg" alt="" class="livros">
             </div>
             <div class="element">
-                <p><a href="https://www.estantevirtual.com.br/oficinadosaber/senai-sp-fundamentos-de-panificacao-e-confeitaria-3893225820?gclid=Cj0KCQjwrfymBhCTARIsADXTabkWXQ-PoMqYmQz7MbRBR_HanI9D1NOPxVPWeqS_XNWfhKeI0DGVbcMaAjCjEALw_wcB" class="link-success link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Fundamentos de panificação e confeitaria</a></p>
+                <p><a href="https://www.estantevirtual.com.br/oficinadosaber/senai-sp-fundamentos-de-panificacao-e-confeitaria-3893225820?gclid=Cj0KCQjwrfymBhCTARIsADXTabkWXQ-PoMqYmQz7MbRBR_HanI9D1NOPxVPWeqS_XNWfhKeI0DGVbcMaAjCjEALw_wcB" class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Fundamentos de panificação e confeitaria</a></p>
                 <img src="img/Fundamentos de Panificação e Confeitaria.jpg" alt="" class="livros">
             </div>
         </div>
@@ -98,6 +98,10 @@
             display: grid;
             grid-template-columns: repeat(3, 1fr);
             gap: 30px;
+        }
+        .container1{
+            padding: 10px;
+            text-align: center;
         }
         .element {
             display: flex;
@@ -120,6 +124,31 @@
             font-size: x-large;
             text-align: center;
         }
-        </style>
-</body>
+        .footer-content {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100%;
+    }
+  </style>
+</head>
+<body>
+<footer class="bg-dark text-light">
+  <div class="container1">
+    <div class="row">
+      <div class="col-12">
+        <div class="footer-content text-center">
+          <p>&copy; 2023 Seu Site. Todos os direitos reservados.</p>
+          <p>Horários de Funcionamento da Biblioteca:</p>
+          <ul>
+            <li>Segunda a Sexta: 08h - 18h</li>
+            <li>Sábado: 09h- 14h</li>
+            <li>Domingo: Fechado</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+</footer>
 </html>
