--- a/Vestuário.html
+++ b/Vestuário.html
@@ -111,6 +111,7 @@
         <div class="element">
             <p><a href="https://www.amazon.com.br/Tecnologia-dos-Processos-T%C3%AAxteis-Cole%C3%A7%C3%A3o/dp/8583931062" class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"> Tecnologia dos processos têxteis</a></p>
             <img src="img/Tecnologia dos Processos Têxteis.jpg" alt="">/
+            
         </div>
 </div>
         
@@ -127,5 +128,22 @@
             <img src="img/Costureiro Eclético.jpg" alt="">
         </div>
 </div>
+</div>
+<footer class="bg-dark text-light">
+    <div class="container1">
+      <div class="row">
+        <div class="col-12">
+          <div class="footer-content text-center">
+            <p>&copy; 2023 Seu Site. Todos os direitos reservados.</p>
+            <p>Horários de Funcionamento da Biblioteca:</p>
+            <ul>
+              <li>Segunda a Sexta: 08h - 18h</li>
+              <li>Sábado: 09h- 14h</li>
+              <li>Domingo: Fechado</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
 </body>
 </html>
