--- a/Metalmecânica.html
+++ b/Metalmecânica.html
@@ -82,6 +82,7 @@
 <div class="element">
 <p><a href="hhttps://www.estantevirtual.com.br/busca?q=Assistente%20Administrativo" class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"> Assistente Administrativo</a></p>
 <img src ="img/Assistente Administrativo.jpg" alt="">
+<button type="button" class="btn-close" disabled aria-label="Close"></button>
 </div>
 
 <div class="element">
@@ -127,5 +128,21 @@
 </div>
 </div>
 <!-- End Example Code -->
+<footer class="bg-dark text-light">
+  <div class="container1">
+    <div class="row">
+      <div class="col-12">
+        <div class="footer-content text-center">
+          <p>&copy; 2023 Seu Site. Todos os direitos reservados.</p>
+          <p>Horários de Funcionamento da Biblioteca:</p>
+          <ul>
+            <li>Segunda a Sexta: 08h - 18h</li>
+            <li>Sábado: 09h- 14h</li>
+            <li>Domingo: Fechado</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
