--- a/automacao.html
+++ b/automacao.html
@@ -129,6 +129,22 @@
 
 </div>
 </div>
-
+</div>
+<footer class="bg-dark text-light">
+    <div class="container1">
+      <div class="row">
+        <div class="col-12">
+          <div class="footer-content text-center">
+            <p>&copy; 2023 Seu Site. Todos os direitos reservados.</p>
+            <p>Horários de Funcionamento da Biblioteca:</p>
+            <ul>
+              <li>Segunda a Sexta: 08h - 18h</li>
+              <li>Sábado: 09h- 14h</li>
+              <li>Domingo: Fechado</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
 </body>
 </html>
