--- a/link.html
+++ b/link.html
@@ -21,5 +21,21 @@
 <p><a href="#" class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Dark link</a></p>
 <p><a href="#" class="link-body-emphasis link-offset-2 link-underline-opacity-25 link-underline-opacity-75-hover">Emphasis link</a></p>
 <!-- End Example Code -->
+<footer class="bg-dark text-light">
+    <div class="container1">
+      <div class="row">
+        <div class="col-12">
+          <div class="footer-content text-center">
+            <p>&copy; 2023 Seu Site. Todos os direitos reservados.</p>
+            <p>Horários de Funcionamento da Biblioteca:</p>
+            <ul>
+              <li>Segunda a Sexta: 08h - 18h</li>
+              <li>Sábado: 09h- 14h</li>
+              <li>Domingo: Fechado</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
 </body>
 </html>
