--- a/video.html
+++ b/video.html
@@ -12,5 +12,21 @@
     <a href="#" class="d-inline-flex focus-ring py-1 px-2 text-decoration-none border rounded-2" style="--bs-focus-ring-x: 10px; --bs-focus-ring-y: 10px; --bs-focus-ring-blur: 4px">
         Clique para conhecer
      </a>
+     <footer class="bg-dark text-light">
+        <div class="container1">
+          <div class="row">
+            <div class="col-12">
+              <div class="footer-content text-center">
+                <p>&copy; 2023 Seu Site. Todos os direitos reservados.</p>
+                <p>Horários de Funcionamento da Biblioteca:</p>
+                <ul>
+                  <li>Segunda a Sexta: 08h - 18h</li>
+                  <li>Sábado: 09h- 14h</li>
+                  <li>Domingo: Fechado</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
 </body>
 </html>
