--- a/Metalmecânica.html
+++ b/Metalmecânica.html
@@ -24,21 +24,21 @@
                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                              Categorias
                            </a>
-                           <ul class="dropdown-menu">
-                             <li><a class="dropdown-item" href="#">Alimentos </a></li>
-                             <li><a class="dropdown-item" href="#">Automação</a></li>
-                             <li><a class="dropdown-item" href="#">Currículo comum</a></li>
-                             <li><a class="dropdown-item" href="#">Eltroeletrônica</a></li>
-                             <li><a class="dropdown-item" href="#">Gestão</a></li>
-                             <li><a class="dropdown-item" href="#">Metalmecânica</a></li>
-                             <li><a class="dropdown-item" href="#">Metalmecânica</a></li>
-                             <li><a class="dropdown-item" href="#">Segurança de trabalho </a></li>
-                             <li><a class="dropdown-item" href="#">TI</a></li>
-                             <li><a class="dropdown-item" href="#">Metalmecânica</a></li>
-                             <li><a class="dropdown-item" href="#">Meio ambiente</a></li>
-       
-                             <li><hr class="dropdown-divider"></li>
-                           </ul>
+                          </a>
+                          <ul class="dropdown-menu">
+                              <li><a class="dropdown-item" href="alimentos.html">Alimentos </a></li>
+                              <li><a class="dropdown-item" href="automacao.html">Automação</a></li>
+                              <li><a class="dropdown-item" href="CurrículoComum.html">Currículo comum</a></li>
+                              <li><a class="dropdown-item" href="eletronica.html">Eltroeletrônica</a></li>
+                              <li><a class="dropdown-item" href="Gestao.html">Gestão</a></li>
+                              <li><a class="dropdown-item" href="Metalmecânica.html">Metalmecânica</a></li>
+                              <li><a class="dropdown-item" href="segurançatrabalho.html">Segurança de trabalho </a></li>
+                              <li><a class="dropdown-item" href="ti.html">TI</a></li>
+                              <li><a class="dropdown-item" href="MeioAmbiente.html">Meio ambiente</a></li>
+                              <li><hr class="dropdown-divider"></li>
+                          </ul>
+                      </li>
+                  </ul>
                          </li>
                          <li class="nav-item">
                            <a class="nav-link disabled" aria-disabled="true">Disabled</a>
@@ -82,7 +82,7 @@
 <div class="element">
 <p><a href="hhttps://www.estantevirtual.com.br/busca?q=Assistente%20Administrativo" class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"> Assistente Administrativo</a></p>
 <img src ="img/Assistente Administrativo.jpg" alt="">
-<button type="button" class="btn-close" disabled aria-label="Close"></button>
+
 </div>
 
 <div class="element">
