--- a/acervo.html
+++ b/acervo.html
@@ -70,11 +70,16 @@
           <li>Não é permitida a reprodução ou distribuição dos materiais sem autorização prévia.</li>
           <li>Ao utilizar os materiais, você concorda em respeitar os direitos autorais e citar as fontes adequadamente.</li>
           <li>A biblioteca não se responsabiliza por informações imprecisas ou desatualizadas nos materiais do acervo.</li>
+          <li> <strong>Acesso e Uso</strong>: O acesso à Biblioteca e seus recursos é permitido apenas para fins educacionais e de pesquisa. Você não deve usar este serviço para qualquer atividade ilegal ou não autorizada.</li>
+          <li> <strong>Comportamento:</strong>Comportamento: Você concorda em manter um comportamento respeitoso ao interagir com outros usuários e ao deixar comentários ou avaliações.</li>
+          <li> <strong> Responsabilidade</strong> O uso da Biblioteca é por sua conta e risco. Não nos responsabilizamos por danos ou perdas decorrentes do uso de nossos serviços.</li>
+          <li><strong>Conteúdo</strong> A Biblioteca disponibiliza uma variedade de materiais. Você concorda em não copiar, reproduzir ou distribuir o conteúdo sem autorização prévia.</li>
         </ol>
         <p>Estes termos estão sujeitos a alterações sem aviso prévio.
         <li> O que funciona?</li>
         <li> Devolução de livros</li>
         <li>Renovação de livros</li>
+        
         </p>
       </div>
       <div class="container text-center">
