--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
                 </div>
             </nav> 
         </nav>
+        <center><h1><p class="font-weight-bold">Biblioteca SENAI</p><h1></center>
          <div id="carouselExample" class="carousel slide">
             <div class="carousel-inner">
               <div class="carousel-item active">
@@ -65,6 +66,7 @@
               <span class="visually-hidden">Next</span>
             </button>
         </div>
+
         <div class="conteudo">
             <p>Conheça a nossa biblioteca:</p>
             <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/xNktUJTsusc?si=qsg4zJFFOxj9chFs" frameborder="0"></iframe>
